HtmlUi: Fix outline-menu-item when text is too long
Test should be cut off (because of fixed line-height).

Still to do: Set fixed width for whole menu, should not be dependent on
width of outline tree.

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/OutlineViewButton.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/OutlineViewButton.css
@@ -5,6 +5,7 @@
   cursor: pointer;
   color: @text-color;
   font-size: 16px;
+  .overflow-ellipsis-nowrap;
 
   &:first-child {
     border-top-color: transparent;
@@ -20,9 +21,9 @@
   }
 
   &.selected {
-      border-top: 1px solid @item-selection-border-color;
-      background-color: @item-selection-background-color;
-      border-color: @item-selection-border-color;
+    border-top: 1px solid @item-selection-border-color;
+    background-color: @item-selection-background-color;
+    border-color: @item-selection-border-color;
   }
 
   &.selected + .outline-menu-item {
@@ -36,6 +37,4 @@
   &:last-child {
     border-bottom: 1px solid @border-color;
   }
-
-
 }
